<resources>
    <string name="app_name">LuckyClick</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (required)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="no_account_sign_up">I don\'t have an account ? Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="cin">CIN</string>
</resources>
